--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-runtime": "^6.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vuex": "^2.3.1",
     "fastclick": "^1.0.6",
     "better-scroll": "^0.1.15",
     "jsonp": "0.2.1",
