--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "better-scroll": "^0.1.15",
     "jsonp": "0.2.1",
     "axios": "^0.16.1",
-    "vue-lazyload": "^1.0.3"
+    "vue-lazyload": "^1.0.3",
+    "create-keyframe-animation": "^0.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
