--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "jsonp": "0.2.1",
     "axios": "^0.16.1",
     "vue-lazyload": "^1.0.3",
-    "create-keyframe-animation": "^0.1.0"
+    "create-keyframe-animation": "^0.1.0",
+    "js-base64": "^2.1.9",
+    "lyric-parser": "^1.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
