--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "babel-runtime": "^6.0.0",
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "vuex": "^2.3.1",
-    "fastclick": "^1.0.6",
-    "better-scroll": "^0.1.15",
-    "jsonp": "0.2.1",
     "axios": "^0.16.1",
-    "vue-lazyload": "^1.0.3",
+    "babel-runtime": "^6.0.0",
+    "better-scroll": "^0.1.15",
     "create-keyframe-animation": "^0.1.0",
+    "express": "^4.17.1",
+    "fastclick": "^1.0.6",
+    "good-storage": "^1.0.1",
     "js-base64": "^2.1.9",
+    "jsonp": "0.2.1",
     "lyric-parser": "^1.0.1",
-    "good-storage": "^1.0.1"
+    "vue": "^2.5.2",
+    "vue-lazyload": "^1.0.3",
+    "vue-router": "^3.0.1",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
